@@ -329,6 +329,15 @@ warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.\n\
 	 This is an optimization, to avoid that spawn/exec searches the PATH
 	 on every call.  */
       grep_path = find_in_path ("grep");
+
+      /* On Solaris >= 2.8, we need to use /usr/xpg4/bin/grep instead of
+	 /usr/bin/grep, because /usr/bin/grep doesn't understand the options
+	 -q and -e.  */
+#if (defined (sun) || defined (__sun)) && defined (__SVR4)
+      if (strcmp (grep_path, "/usr/bin/grep") == 0
+	  && access ("/usr/xpg4/bin/grep", X_OK) == 0)
+	grep_path = "/usr/xpg4/bin/grep";
+#endif
     }
 
   /* Build argument lists for the 'grep' program.  */
