@@ -1,3 +1,9 @@
+2003-03-13  Bruno Haible  <bruno@clisp.org>
+
+	* msggrep.c (main): On Solaris, prefer /usr/xpg4/bin/grep to
+	/usr/bin/grep. Needed for Solaris 2.8 and 2.9.
+	Reported by Sven Utcke <utcke@informatik.uni-hamburg.de>.
+
 2003-03-03  Bruno Haible  <bruno@clisp.org>
 
 	* msgen.c (usage): Don't say that the entries are marked fuzzy.
